// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobDetail: Component should render correctly 1`] = `
<Fragment>
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Details"
        id="jobDetail.subTitle"
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Job"
        id="jobDetail.title"
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="jobDetail.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Details"
        id="jobDetail.subTitle"
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Job"
        id="jobDetail.title"
      />
    }
  />
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <Component />
  </LoadingWrapper>
  <NavigationContainer
    contentStyles={null}
    fixed={true}
    hideOnDesktop={false}
    right={false}
  >
    <BackButton
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Back"
        id="jobDetail.back"
      />
    </BackButton>
    <NextButton
      disabled={false}
      loading={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Save"
        id="jobDetail.save"
      />
    </NextButton>
  </NavigationContainer>
</Fragment>
`;

exports[`JobDetail: Component should render correctly with failure job 1`] = `
<Fragment>
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Details"
        id="jobDetail.subTitle"
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Job"
        id="jobDetail.title"
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="jobDetail.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Details"
        id="jobDetail.subTitle"
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Job"
        id="jobDetail.title"
      />
    }
  />
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <Component />
  </LoadingWrapper>
  <NavigationContainer
    contentStyles={null}
    fixed={true}
    hideOnDesktop={false}
    right={false}
  >
    <BackButton
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Back"
        id="jobDetail.back"
      />
    </BackButton>
    <NextButton
      disabled={false}
      loading={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Save"
        id="jobDetail.save"
      />
    </NextButton>
  </NavigationContainer>
</Fragment>
`;

exports[`JobDetail: Component should render correctly with fake job 1`] = `
<Fragment>
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Details"
        id="jobDetail.subTitle"
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Job"
        id="jobDetail.title"
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="jobDetail.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Details"
        id="jobDetail.subTitle"
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Job"
        id="jobDetail.title"
      />
    }
  />
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <Component />
  </LoadingWrapper>
  <NavigationContainer
    contentStyles={null}
    fixed={true}
    hideOnDesktop={false}
    right={false}
  >
    <BackButton
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Back"
        id="jobDetail.back"
      />
    </BackButton>
    <NextButton
      disabled={false}
      loading={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Save"
        id="jobDetail.save"
      />
    </NextButton>
  </NavigationContainer>
</Fragment>
`;

exports[`JobDetail: Component should render correctly with loader 1`] = `
<Fragment>
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Details"
        id="jobDetail.subTitle"
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Job"
        id="jobDetail.title"
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="jobDetail.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Details"
        id="jobDetail.subTitle"
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Job"
        id="jobDetail.title"
      />
    }
  />
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent={null}
  >
    <Component />
  </LoadingWrapper>
  <NavigationContainer
    contentStyles={null}
    fixed={true}
    hideOnDesktop={false}
    right={false}
  >
    <BackButton
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Back"
        id="jobDetail.back"
      />
    </BackButton>
    <NextButton
      disabled={false}
      loading={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Save"
        id="jobDetail.save"
      />
    </NextButton>
  </NavigationContainer>
</Fragment>
`;
